--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,4 +14,8 @@ body{
 @import "partials/footer";
 @import "partials/index";
 @import "partials/colores";
+@import "partials/nosotros";
+@import "partials/cervezas";
+@import "partials/bares";
+@import "partials/contactarnos";
 
