--- a/scss/partials/_index.scss
+++ b/scss/partials/_index.scss
@@ -1,8 +1,7 @@
 @import "../partials/colores";
 @import "../partials/tipografia";
 
-// banner del index
-/*Contenido index mobile*/
+/* estilos paguina cervezas mobile*/
 
 section{
     .banner{
