--- a/views/bares.html
+++ b/views/bares.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../estilos/estilo_index.css"/>
+    <link rel="stylesheet" href="../estilos/css.css"/>
     <title>NUESTROS BARES</title>
 </head>
 
@@ -36,7 +36,7 @@
 
     <!--titulo-->
 
-    <div class="consulta">
+    <div class="nuestrosBares">
         <h2>Nuestros Bares</h2>
     </div>
     
@@ -101,30 +101,28 @@
 
 </body>
 
-    <!--Footer-->
+<!--inicio Footer-->
 
-    <footer>
+<footer>
     <section>
-        <a href="../index.html"><img src="../img/logo_cerveceria_nogal.png" alt="logo_cerveceria_nogal" class="logoPie"></a>
+    <a href="../index.html"><img src="../img/logo_cerveceria_nogal.png" alt="logo_cerveceria_nogal" class="logoPie"></a> 
     </section>
     
     <div class="footer1">
-    <div class="itemsFooter">
-        <h2>REDES SOCIALES</h2>
-     
+        <h2 class="ti1">REDES SOCIALES</h2>
         <a href="https://www.facebook.com/" target="_blank"><img src="../img/facebook.png" alt="facebook" class="RD"></a>
         <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt="instagram" class="RD"></a>
         <a href="https://www.whatsapp.com/" target="_blank"><img src="../img/whatsapp.png" alt="whatsapp" class="RD"></a>
     </div>
     <div class="itemsFooter">
-     <H2>CONTACTOS</H2>
+     <H2 class="ti2">CONTACTOS</H2>
      <ul>
          <li>tel: 1245651566161</li>
          <li>correo: cervezanogal4541@gmail.com</li> 
      </ul>
      </div>
      <div class="itemsFooter">
-     <H2>DIRECCIONES DE BARES</H2>
+     <H2 class="ti3">DIRECCIONES DE BARES</H2>
      <ul>
          <li>CABA: avenida drectorio 15615</li>
          <li>CORDOBA: guemes45314</li>
@@ -132,10 +130,10 @@
      </ul>
     </div>   
     </div>
-
+</footer>
+    
     <div class="derechos"><p>(c)todos los derechos reservados</p></div>
-    </footer>
-
+    
     <!--Fin Footer-->
 
 </html>
