--- a/views/bares.html
+++ b/views/bares.html
@@ -44,7 +44,7 @@
     
     <!--Imagen de bienvenida-->
     
-    <div class="container imagenBar">
+    <div class= "container-md imagenBar">
     
     <img src="../img/barinicio.jpg" class="img-fluid border" alt="PasandoUnaBirra"> 
     
@@ -55,9 +55,9 @@
     <!--Contenido-->
 
     <section>
-        <div class="container contenedorBares w-100 mt-5 mx-auto">
+        <div class="container-md contenedorBares w-100 mt-5 mx-auto mb-5">
 
-            <div class="container contenedorBares">
+            <div class="container-md contenedorBares">
                 <div class="row">
                   <div class="col-md-4">
 
@@ -107,9 +107,12 @@
     <section>
     <a href="../index.html"><img src="../img/logo_cerveceria_nogal.png" alt="logo_cerveceria_nogal" class="logoPie"></a> 
     </section>
+
+    <div class="ti1">   
+        <h2>REDES SOCIALES:</h2>
+    </div>
     
     <div class="footer1">
-        <h2 class="ti1">REDES SOCIALES</h2>
         <a href="https://www.facebook.com/" target="_blank"><img src="../img/facebook.png" alt="facebook" class="RD"></a>
         <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt="instagram" class="RD"></a>
         <a href="https://www.whatsapp.com/" target="_blank"><img src="../img/whatsapp.png" alt="whatsapp" class="RD"></a>
