--- a/scss/partials/_bares.scss
+++ b/scss/partials/_bares.scss
@@ -20,6 +20,7 @@
 }
 section{
     .contenedorBares{
+        background-color: $fondoLegible;
         & h2{
     width: 100%;
     font-size: 30px;
@@ -34,6 +35,7 @@ section{
         & p{
             font-size: $tamanoParrafo;
             color: $negro;
+            
         }
         & img{
             animation-name: inicioBar;
@@ -52,3 +54,4 @@ section{
 }
 
 /*FIN de estilos paguina bares mobile*/
+
