--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -8,7 +8,9 @@ footer{
         display: flex;
         flex-flow: column nowrap;
         justify-content:center;
-        margin-left: 15px;
+        padding-left: 15px;
+        background-color: $fondoLegible;
+        border-radius: 5px;
         
     section{
         .logoPie{
@@ -18,23 +20,33 @@ footer{
             color: $marino;
         } 
     }
+    .ti1{
+        margin-top: 15px;
+        padding-left: 15px;
+        color:map-get($paleta, marino);;
+        font-size: $tamanoTitulos;
+        display: flex;
+        align-items: center;
+
+     }
+
     .footer1{
+        width: 50%;
+        display: flex;
+        flex-flow:row wrap;
+        align-items: center;
+        .ti1{
+            width: 50%;
+            
+        }
         
-        & h2{
-            margin-top: 15px;
-            color:map-get($paleta, marino);;
-            font-size: $tamanoTitulos;
-        
-         }
          & a{
             font-size: $tamanoParrafo;
             color: $negro;
+            flex-flow: row;
             .RD{
-                width:100px;
+                width:40px;
                 margin-left: 10px;
-                animation-name: RD;
-                animation-iteration-count:infinite;
-                animation-duration: 5s;
             }
          }
         
@@ -42,10 +54,10 @@ footer{
     .itemsFooter{
         margin: 15px;
         h2{
+            width: 50%;
             margin-top: 15px;
             color: map-get($paleta, marino);
             font-size: $tamanoTitulos;
-        
          }
          ul{
              li{
@@ -53,14 +65,7 @@ footer{
             color: $negro;}
              }
     }
-    @keyframes RD {
-        from {
-            transform:scale(0);
-        }
-        to {
-            transform:scale(1);
-        }
-        }
+    
     
 }
 .derechos{
@@ -81,6 +86,8 @@ footer{
     display: flex;
     flex-flow: row;
     align-items: center;
+    background-color: $fondoLegible;
+    border-radius: 5px;
     section{
         .logoPie{
             width: 200px;
@@ -93,6 +100,7 @@ footer{
         width:100%;
         padding-top:15px;
         margin-left: 10px;
+        
         .ti1{
         font-size: $tamanoTitulos;
            
@@ -117,11 +125,21 @@ footer{
         flex-flow: column;
         align-items: center; 
         text-align: center;
-        
+           
+        .ti2{
+            width: 100%;
+            text-align: center; 
+          
+        }
+        .ti3{
+            width: 100%;
+            text-align: center;  
+        }
         h2{
            margin-top: 15px;
            color: $marino;
            font-size: $tamanoTitulos;
+        
          }
         ul{
             margin-top: 10px;
