--- a/views/cervezas.html
+++ b/views/cervezas.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../estilos/css.css"/>
-    <title>CERVEZAS ARTESANALES</title>
+    <title>Cervezas Artesanales</title>
 </head>
 
 <body>
@@ -46,7 +46,7 @@
     <!--Fin Banner y titulo-->
 
     <!--Contenido-->
-    <main class="gridCervezas">
+    <main class="container">
 
          <h2 class="tituloRubias">RUBIAS</h2>
          <h2 class="tituloRojas">ROJAS</h2>
@@ -95,9 +95,12 @@
     <section>
     <a href="../index.html"><img src="../img/logo_cerveceria_nogal.png" alt="logo_cerveceria_nogal" class="logoPie"></a> 
     </section>
+
+    <div class="ti1">   
+        <h2>REDES SOCIALES:</h2>
+    </div>
     
     <div class="footer1">
-        <h2 class="ti1">REDES SOCIALES</h2>
         <a href="https://www.facebook.com/" target="_blank"><img src="../img/facebook.png" alt="facebook" class="RD"></a>
         <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt="instagram" class="RD"></a>
         <a href="https://www.whatsapp.com/" target="_blank"><img src="../img/whatsapp.png" alt="whatsapp" class="RD"></a>
