--- a/views/contactanos.html
+++ b/views/contactanos.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../estilos/css.css"/>
-    <title>CONTACTANOS</title>
+    <title>Contactanos</title>
 </head>
 
 <body>
@@ -44,7 +44,7 @@
 
     <!--Imagen de bienvenida-->
 
-    <div class="container imagenContactos">
+    <div class="container-md imagenContactos">
 
     <img src="../img/PasandoBirra.jpg" class="img-fluid border" alt="PasandoUnaBirra"> 
 
@@ -54,7 +54,7 @@
 
     <!--Formulario-->
     
-    <div class="container formulario">
+    <div class="container-md formulario mb-5">
 
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Tu Email:</label>
@@ -90,9 +90,12 @@
     <section>
     <a href="../index.html"><img src="../img/logo_cerveceria_nogal.png" alt="logo_cerveceria_nogal" class="logoPie"></a> 
     </section>
+
+    <div class="ti1">   
+        <h2>REDES SOCIALES:</h2>
+    </div>
     
     <div class="footer1">
-        <h2 class="ti1">REDES SOCIALES</h2>
         <a href="https://www.facebook.com/" target="_blank"><img src="../img/facebook.png" alt="facebook" class="RD"></a>
         <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt="instagram" class="RD"></a>
         <a href="https://www.whatsapp.com/" target="_blank"><img src="../img/whatsapp.png" alt="whatsapp" class="RD"></a>
